# tee-prover-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.tee  Dockerfile.tee.actions  README.md  build_witnesscalc.sh  circuit_eliminator.sh  listener_setup.sql  setup.sql  start.sh
.github/workflows/: artifacts.yml  deploy.yml
instance-deps/: run.sh  socat
relayer/: index.ts  package.json  pcr0Manager.json  pnpm-lock.yaml
relayer/typechain/: Pcr0Manager.ts  index.ts
relayer/typechain/factories/: Pcr0Manager__factory.ts  index.ts
scripts/: git-lfs.txt  nitro-cli.txt  self-hosted.txt  socat.txt
src/: args.rs  listener_setup.sql  main.rs  server.rs  store.rs  types.rs  utils.rs
src/db/: mod.rs  types.rs
src/generator/: file_generator.rs  mod.rs  proof_generator.rs  witness_generator.rs
witnesscalc/: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  add_circuit.sh  build_gmp.sh  build_witness.sh  build_witnesses.sh  input.json  pre_build_witnesses.sh
witnesscalc/src/: CMakeLists.txt  witnesscalc_registerSha1Sha256Sha256Rsa655374096.cpp  witnesscalc_registerSha1Sha256Sha256Rsa655374096.h  witnesscalc_registerSha256Sha256Sha256EcdsaBrainpoolP256r1.cpp  witnesscalc_registerSha256Sha256Sha256EcdsaBrainpoolP256r1.h
zkeys/: dsc_sha256_rsa_65537_4096.zkey  registerSha256Sha256Sha256EcdsaBrainpoolP256r1.zkey  register_sha1_sha256_sha256_rsa_65537_4096.zkey  register_sha256_sha256_sha256_ecdsa_brainpoolP256r1.zkey  register_sha256_sha256_sha256_rsa_65537_4096.zkey  vc_and_disclose.zkey
