[package]
name = "tee-server"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = {version = "0.24.7", features = ["server", "macros", "client-core"]}
tokio = {version="1.37.0", features = ["fs", "process"]}
ring = "0.17.8"
uuid = {version = "1.12.0", features = ["v4", "serde"]}
serde = "1.0.217"
serde_json = "1.0.135"
aes-gcm = "0.10"
convert_case = "0.7.1"
sqlx = {version="0.8.3", features=["runtime-tokio-rustls", "postgres", "uuid"]}
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
clap = { version = "4.3", features = ["derive"] }
reqwest = "0.12.12"
tokio-vsock = "0.7.0"
hyper = { version = "0.14", features = ["server", "http1"] }
axum = { version = "0.8", features = ["tokio", "http1"] }
tower = "0.5.2"
tokio-util = "0.7.13"
aws-nitro-enclaves-nsm-api = "0.4.0"
serde_bytes = "0.11.15"
